--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ python-magic
 beautifulsoup4>=4.8.2,<4.8.10
 Pyrogram>=0.16.0,<0.16.10
 TgCrypto>=1.1.1,<1.1.10
-git+git://github.com/lzzy12/youtube-dl@d7c2b43#youtube_dl
+youtube_dl
 psycopg2-binary
 lxml
 telegraph
